# my_life_calendar

./: .gitignore  .pre-commit-config.yaml  COVERAGE.md  README.md  TODO.md  commands.txt  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: GITHUB.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
data/: DATA.md  db.sqlite3
hello_world_app/: tests.py  views.py
hello_world_app/templates/hello_world_app/: hello_world.html
home_app/: tests.py  views.py
home_app/templates/home_app/: home.html  welcome.html
my_life_calendar_app/: apps.py  tests.py  views.py
my_life_calendar_app/templates/my_life_calendar_app/: my_life_calendar.html
my_life_calendar_project/: asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
my_life_calendar_project/home/templates/home/: home.html
my_life_calendar_project/my_life_calendar/: apps.py  views.py
my_life_calendar_project/my_life_calendar/static/my_life_calendar/css/: styles.css
my_life_calendar_project/my_life_calendar/templates/my_life_calendar/: my_life_calendar.html
my_life_calendar_project/my_life_calendar_project/: asgi.py  settings.py  urls.py  wsgi.py
