[project]
name = "my-life-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.13",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
